# AgenticAI-App

./: .gitignore  LICENSE  README.md  pyproject.toml  research_agent.py
src/agenticai_app/: main.py
tests/: test_step_2_4.py  test_workflow_agent_basic.py  test_workflow_agent_basic_pytest.py  test_workflow_agent_conditionals.py  test_workflow_agent_dependencies.py  test_workflow_agent_dependencies_out_of_order.py  test_workflow_agent_final_synthesis.py  test_workflow_agent_global_refinement.py  test_workflow_agent_parallel.py  test_workflow_agent_refinement.py  test_workflow_agent_while.py
tests/integration/: test_workflow_agent_final_synthesis_pytest.py
tests/unit/: test_workflow_agent_conditionals_pytest.py  test_workflow_agent_dependencies_out_of_order_pytest.py  test_workflow_agent_dependencies_pytest.py  test_workflow_agent_global_refinement_pytest.py  test_workflow_agent_parallel_pytest.py  test_workflow_agent_refinement_pytest.py  test_workflow_agent_while_pytest.py
